--- a/Lesson 1/index.html
+++ b/Lesson 1/index.html
@@ -7,6 +7,6 @@
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-    <p>Hello world1!!!</p>
+    <p>Hello world1!!!+++</p>
 </body>
 </html>
